[package]
name = "kwap"
version = "0.3.2"
edition = "2021"
description = "Reliable cross-platform CoAP server runtime"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/kwap/kwap"
repository = "https://github.com/clov-coffee/kwap/kwap"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
test = []
docs = []

[dependencies]
kwap-msg = "0.4.4"
kwap-common = "0.6.0"
tinyvec = {version = "1.5", default_features = false, features = ["rustc_1_55"]}
kwap-macros = "0.1.6"
no-std-net = "0.6"
embedded-time = "0.12"
nb = "1"

[dev-dependencies]
