[package]
name = "kwap"
version = "0.7.0"
edition = "2021"
description = "Reliable cross-platform CoAP server runtime"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/kwap/kwap"
repository = "https://github.com/clov-coffee/kwap/kwap"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "raw_client"
path = "examples/raw/client.rs"

[[example]]
name = "raw_client_core"
path = "examples/raw/client_core.rs"

[[example]]
name = "raw_server"
path = "examples/raw/server.rs"

[[example]]
name = "blocking_server"
path = "examples/blocking/server.rs"

[[example]]
name = "blocking_client"
path = "examples/blocking/client.rs"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
test = []
docs = []

[dependencies]
kwap-msg = "0.5.1"
kwap-common = "0.6.3"
tinyvec = { version = "1.5", default_features = false, features = ["rustc_1_55"] }
kwap-macros = "0.1.6"
no-std-net = "0.6"
embedded-time = "0.12"
nb = "1"
