[package]
name = "kwap-macros"
version = "0.1.5"
edition = "2021"
description = "Macros used by kwap for boilerplate reduction"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/kwap/kwap_macros"
repository = "https://github.com/clov-coffee/kwap/kwap_macros"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc_macro = true
path = "./src/lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
regex = "1.0"
