[package]
name = "kwap-msg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = ["no_std"]
no_std = []
test = []
docs = []

[[bench]]
name = "to_bytes"
harness = false

[[bench]]
name = "to_bytes_profile"
harness = false

[dependencies]
arrayvec = "0.7"

[dev-dependencies]
itertools = "0.10"
criterion = "0.3"
coap-lite = "0.7"
