[package]
name = "kwap-msg"
version = "0.4.1"
edition = "2021"
description = "Low-level CoAP message parsing & serialization"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/kwap/kwap_msg"
repository = "https://github.com/clov-coffee/kwap/kwap_msg"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["alloc"]
alloc = ["no_std"]
no_std = []
test = []
docs = []

[[bench]]
name = "some_vs_once"
harness = false

[[bench]]
name = "to_bytes"
harness = false

[[bench]]
name = "from_bytes"
harness = false

[[bench]]
name = "profile"
harness = false

[[bench]]
name = "collections"
harness = false

[dependencies]
tinyvec = {version = "1.5", default_features = false, features = ["rustc_1_55"]}
kwap-macros = "0.1.6"
kwap-common = "0.6"

[dev-dependencies]
itertools = "0.10"
criterion = "0.3"
coap-lite = "0.7"
arrayvec = {version = "0.7", default_features = false}
heapless = {version = "0.7", default_features = false}
