[package]
name = "toad-array"
version = "0.0.0"
edition = "2021"
description = "Array trait used by the toad ecosystem to abstract over heap or heapless collections"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
test = []
docs = []

[dependencies]
tinyvec = {version = "1.5", default_features = false, features = ["rustc_1_55"]}
