[package]
name = "toad-hash"
version = "0.2.0"
edition = "2021"
description = "no_std hashing used by toad"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
test = []
docs = []

[dependencies]
blake2 = "0.10"
