[package]
name = "toad-jni"
version = "0.16.0"
edition = "2021"
description = "JNI abstractions and bindings used by the toad ecosystem"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
test = []
docs = []

[dependencies]
nb = "1"
no-std-net = "0.6"
tinyvec = {version = "1.5", default_features = false, features = ["rustc_1_55"]}
toad-msg = "0.18.1"
toad = "0.19.1"
jni = {version = "0.21.1", features = ["invocation"]}
toad-stem = {version = "0.1.0", default_features = false}
toad-len = {version = "0.1.3", default_features = false}
toad-array = {version = "0.5.0", default_features = false}
log = "0.4"

embedded-time = "0.12"
