[package]
name = "toad-macros"
version = "0.2.1"
edition = "2021"
description = "Macros used by toad for boilerplate reduction"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad_macros"
repository = "https://github.com/clov-coffee/toad/toad_macros"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc_macro = true
path = "./src/lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
regex = "1.0"
