[package]
name = "toad-stem"
version = "0.0.0"
edition = "2021"
description = "This microcrate provides a mutable memory wrapper that is thread-safe and usable on `no_std` platforms."
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
test = []
docs = []

[dependencies]
