[package]
name = "toad-writable"
version = "0.1.1"
edition = "2021"
description = "This microcrate provides a struct implementing [`core::fmt::Write`] for all [`toad_array::Array`]s"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["alloc", "toad-array/std"]
alloc = ["toad-array/alloc"]
test = []
docs = []

[dependencies]
toad-array = {version = "^0.2.2", default-features = false}
