[package]
name = "toad"
version = "0.12.2"
edition = "2021"
description = "Universal implementation of the CoAP networking protocol"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "server_minimal"
path = "examples/server_minimal.rs"

[[example]]
name = "server_traffic"
path = "examples/server_traffic.rs"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["alloc", "openssl", "toad-common/std"]
alloc = ["toad-common/alloc"]
test = []
docs = []

[dependencies]
toad-common = {version = "0.11.3", default_features = false}
toad-msg = "0.12.0"
toad-macros = "0.2.0"
log = "0.4"
tinyvec = { version = "1.5", default_features = false, features = ["rustc_1_55"] }
no-std-net = "0.6"
embedded-time = "0.12"
nb = "1"
rand = { version = "0.8", default_features = false }
rand_chacha = { version = "0.3", default_features = false }
openssl = { version = "0.10", optional = true }
paste = "1.0.9"
naan = "0.1.27"

[dev-dependencies]
simple_logger = "2"
lazycell = "1.3.0"
paste = "1.0.9"
