[package]
name = "toad"
version = "0.17.7"
edition = "2021"
description = "Universal implementation of the CoAP networking protocol"
authors = ["Orion Kindel <cakekindel@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/clov-coffee/toad/toad"
repository = "https://github.com/clov-coffee/toad/toad"
readme = "README.md"
keywords = ["coap", "iot", "networking", "no_std", "wasm"]
categories = ["network-programming"]

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "server_minimal"
path = "examples/server_minimal.rs"

[[example]]
name = "server_traffic"
path = "examples/server_traffic.rs"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "std_serde_json"]
std = ["alloc", "openssl", "toad-array/std", "toad-len/std", "toad-map/std", "toad-writable/std", "toad-stem/std"]
std_serde = ["serde/std"]
std_serde_json = ["std_serde", "serde_json/std"]
serde = ["dep:serde"]
unstable_serde_json = ["serde", "dep:serde-json-core"]
alloc = ["toad-array/alloc", "toad-writable/alloc", "toad-stem/alloc", "toad-len/alloc", "toad-map/alloc"]
test = []
docs = []

[dependencies]
toad-array = {version = "0.2.3", default_features = false}
toad-map = {version = "0.2.3", default_features = false}
toad-len = {version = "0.1.3", default_features = false}
toad-hash = {version = "0.3.0", default_features = false}
toad-writable = {version = "0.1.1", default_features = false}
toad-stem = {version = "0.1.0", default_features = false}
toad-msg = "0.18.1"
toad-macros = "0.2.0"
log = "0.4"
tinyvec = { version = "1.5", default_features = false, features = ["rustc_1_55"] }
no-std-net = "0.6"
embedded-time = "0.12"
nb = "1"
rand = { version = "0.8", default_features = false }
rand_chacha = { version = "0.3", default_features = false }
openssl = { version = "0.10", optional = true }
paste = "1.0.9"
naan = "0.1.30"
serde = { version = "1.0", optional = true, default_features = false }
serde_json = { version = "1.0", optional = true, default_features = false }
serde-json-core = { version = "0.5.0", optional = true }

[dev-dependencies]
simple_logger = "2"
lazycell = "1.3.0"
paste = "1.0.9"
serde = {version = "1.0", features = ["derive"]}
serde-json-core = { version = "0.5.0" }
serde_json = { version = "1.0" }
